<resources>
    <string name="app_name">Tap4Markets</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="work_email">Work Email (Optional for Individual services)</string>
    <string name="work_email_hint">Work Email</string>
    <string name="zip_code">Zip code</string>
    <string name="nick_name">Nickname</string>
    <string name="sms_number">SMS Number</string>
    <string name="title_activity_main">TapIn</string>

    <string name="alert_check_connection">Please check your Internet Connection.</string>
    <string name="alert_logout">Are you sure you want to Logout?</string>
    <string name="alert_delete_mails">Are you sure you want to delete selected mails?</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <string name="action_settings">Settings</string>

    <!--PROGRESS MESSAGE-->
    <string name="logging_in">Logging in...</string>
    <string name="please_wait">Please wait...</string>

    <string-array name="countries">

        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>


        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>


        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>

        <item>Czech Republic</item>

        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>

        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>

        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>

        <item>Gabon</item>
        <item>Gambia, The</item>
        <item>Georgia</item>
        <item>Ghana</item>
        <item>Greece</item>


        <item>Haiti</item>
        <item>Holy See</item>
        <item>Honduras</item>


        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>


        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
    </string-array>

    <!--DASHBOARD-->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="points">Points</string>
    <string name="order_summary">Order Summary</string>
    <string name="payment">Payment</string>
    <string name="confirmation">Confirmation</string>

    <string-array name="tabs">
        <item>@string/home</item>
        <item>@string/profile</item>
        <item>@string/notifications</item>
        <item>@string/points</item>
    </string-array>

    <string name="save_and_back">Save &amp; back</string>

    <string name="no_work_email">There is not work email in your profile so we cannot determine your corporation.</string>
    <string name="please_update_your_work_email">We are taking you to the profile page. Please update you profile info and work email. Then come back to this page.</string>
    <string name="join_tap_in_text_with_email">Based on your work email, your company has not joined our lunch service. Request service at info@Tap-in.com.</string>
    <string name="delivery_location">Delivery location?</string>
    <string name="mobile_app_ordering_cut_off">Mobile app ordering Cut off:</string>
    <string name="pickup_date">Pickup date:</string>
    <string name="pickup_at">Pickup at</string>
    <string name="business_hours">Business hours</string>
</resources>
