<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:padding="@dimen/_6sdp"
                android:text="Email"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sdp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/_6sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:padding="@dimen/_6sdp"
                android:text="@string/work_email"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sdp" />

            <EditText
                android:id="@+id/etWorkEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/work_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/_6sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:padding="@dimen/_6sdp"
                android:text="@string/zip_code"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sdp" />

            <EditText
                android:id="@+id/etZipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zip_code"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/_6sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:padding="@dimen/_6sdp"
                android:text="@string/nick_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sdp" />

            <EditText
                android:id="@+id/etNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nick_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_6sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:padding="@dimen/_6sdp"
                android:text="@string/sms_number"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sdp" />

            <EditText
                android:id="@+id/etSMSNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sms_number"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="@dimen/_6sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnManageCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="Mange Card"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp" />

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="Back"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/save_and_back"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>